--- a/.github/workflows/android-feature (copy).yml
+++ b/.github/workflows/android-feature (copy).yml
@@ -20,27 +20,14 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-
-
-      # Step 3: Check the code with ktlint, you can remove this job if you don't use ktlint
-      - name: Run Kotlin Linter
-        run: ./gradlew ktlintStagingDebugCheck
-
-      # Step 3: Check the code with Android linter
-      - name: Run Android Linter
-        run: ./gradlew lintStagingDebug
-
-      # Step 4: Yun your unit tests
-      - name: Run Unit Tests
-        run: ./gradlew test
-
-      # Step 4: Assemble debug apk to send to firebase test lab
-      - name: Assemble Debug APK
-        run: ./gradlew assembleDebug
-
-      # Step 4: Assemble debug test apk to send to firebase test lab
-      - name: Assemble Debug Test APK
-        run: ./gradlew assembleDebugAndroidTest
-
-      - name: "Run UI Tests"
-  	uses: vgaidarji/android-github-actions-emulator@v1.0.1
+    - uses: actions/checkout@v1
+    - name: set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Build with Gradle
+      run: ./gradlew build --stacktrace
+    - name: Run Unit tests
+      run: ./gradlew testDebugUnitTest
+    - name: Run UI Tests
+      uses: "vgaidarji/android-github-actions/emulator@v1.0.0"
