--- a/.github/workflows/android-feature (copy).yml
+++ b/.github/workflows/android-feature (copy).yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   testing:
-    name: Lint Check and Testing
+    name: UI
 
     runs-on: ubuntu-latest
 
@@ -20,9 +20,12 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+
       - name: Build with Gradle
         run: ./gradlew build --stacktrace
+
       - name: Run Unit tests
         run: ./gradlew testDebugUnitTest
+
       - name: Run UI Tests
         uses: "vgaidarji/android-github-actions/emulator@v1.0.0"
